<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="dambrero.androidsays.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainTitleText_text"
        android:id="@+id/titleText"
        android:layout_marginTop="88dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/mainStartButton_text"
        android:id="@+id/startButton"
        android:onClick="onClickStart"
        android:layout_marginTop="63dp"
        android:layout_below="@+id/titleText"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/mainInstructionsButton_text"
        android:id="@+id/instructionButton"
        android:layout_below="@+id/startButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="onClickInstructions" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/mainSettingsButton_text"
        android:id="@+id/settingsButton"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/instructionButton"
        android:layout_centerHorizontal="true"
        android:onClick="onClickSettings" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainHighScoreText_text"
        android:id="@+id/highScoreText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainDifficultyText_text"
        android:id="@+id/difficultyText"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mainSoundsText_text"
        android:id="@+id/soundsText"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Vibrations: "
        android:id="@+id/vibrationsText"
        android:layout_alignBottom="@+id/soundsText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="TRAINING"
        android:id="@+id/button"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/settingsButton"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="STORE"
        android:id="@+id/storeButton"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="onClickStore" />
</RelativeLayout>
